fix table, markets, widget-hweader, order-book

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 
         <router-outlet></router-outlet>
 
-        <a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>
+        <!--<a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>-->
       <!--</div>-->
     </div>
   </div>
