--- a/src/app/dashboard/trading/trading.component.scss
+++ b/src/app/dashboard/trading/trading.component.scss
@@ -1,5 +1,7 @@
 $darker-blue:#237BEF;
-
+.widget__header{
+  background-color: transparent;
+}
 .tab-no-active{
   border-bottom: 2px solid transparent;
 }
