--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -27,7 +27,7 @@
 
     <div class="widget__chat-wrap">
       <!--<ng-scrollbar [autoHide]="false" [barClass]="'bar-class'" [thumbClass]="'thumb2'">-->
-      <perfect-scrollbar style="max-width: 600px; max-height: 380px;">
+      <perfect-scrollbar style="max-height: 380px;">
         <div class="" *ngFor="let dateChatItem of dateChatItems">
           <app-day-chat [dateChatItem]="dateChatItem"></app-day-chat>
         </div>
