--- a/src/app/dashboard/chat/chat.component.scss
+++ b/src/app/dashboard/chat/chat.component.scss
@@ -8,7 +8,9 @@ ng-scrollbar{
 :host {
   width: 100%;
 }
-
+.widget__header{
+  background-color: transparent;
+}
 .widget__content{
   height: calc(100% - 44px);
 }
