--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -1,5 +1,5 @@
 <div class="widget widget--gradient">
-  <div class="widget__header panel-heading" >
+  <div class="widget__header panel-heading">
     <span class="widget__name">Markets</span>
     <a href="#" class="widget__question">
       <span class="widget__question-img">
@@ -128,23 +128,18 @@
             </th>
             <th class="table__cell-head table__cell-head--tal table__cell-head--p4" width="17%">Change %</th>
             <th class="table__cell-head table__cell-head--tar table__cell-head--p4" width="30%" (click)="sortVolume()">
-              <svg class="table__cell-head-arr" width="6" height="8" viewBox="0 0 6 8" fill="none"
-                   xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z"/>
-              </svg>
               Volume
             </th>
           </tr>
           </thead>
 
-        <tbody class="table__body table__body--none-shadow">
-            <!-- Content -->
-            <ng-container *ngFor="let pair of pairs | currencySort :'volume'">
-              <tr style="height: 4px;"></tr>
-              <tr class="table__row widget__table-row"
-                  [ngClass]="{'widget__table-row--green': isChangePositive(pair), 'widget__table-row--red': !isChangePositive(pair)}">
-                <td class="table__cell table__cell--tac" width="7%">
+          <tbody class="table__body table__body--none-shadow">
+          <!-- Content -->
+          <ng-container *ngFor="let pair of pairs | currencySort :'volume'">
+            <tr style="height: 4px;"></tr>
+            <tr class="table__row widget__table-row"
+                [ngClass]="{'widget__table-row--green': isChangePositive(pair), 'widget__table-row--red': !isChangePositive(pair)}">
+              <td class="table__cell table__cell--tac" width="7%">
                 <span class="table__row-star" [ngClass]="{'table__row-star--select': isFavourite(pair)}" (click)="toggleFavourite(pair)">
                   <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -160,13 +155,13 @@
               <td class="table__cell" width="25%" (click)="onSelectCurrencyPair(pair)">
                 <span class="txt-indicate">{{pair.lastOrderRate | replaceNumber}}</span>
               </td>
-                <td class="table__cell" width="17%" (click)="onSelectCurrencyPair(pair)">
+              <td class="table__cell" width="17%" (click)="onSelectCurrencyPair(pair)">
                 <span style="margin-right: 2px;"
                       [ngClass]="{'txt-green': isChangePositive(pair), 'txt-red': !isChangePositive(pair)}">{{pair.percentChange | positivePipe | replaceNumber}}</span>
-                  <span class="arr"
-                        [ngClass]="{'arr--green': isChangePositive(pair), 'arr--red': !isChangePositive(pair)}"></span>
-                </td>
-              <td class="table__cell table__cell--tar" width="30%"(click)="onSelectCurrencyPair(pair)">
+                <span class="arr"
+                      [ngClass]="{'arr--green': isChangePositive(pair), 'arr--red': !isChangePositive(pair)}"></span>
+              </td>
+              <td class="table__cell table__cell--tar" width="30%" (click)="onSelectCurrencyPair(pair)">
                 <span style="font-size: 10px; color:#A0A0A0">{{ +pair.volume | number: '1.0-0' | replaceNumber}}</span>
               </td>
 
@@ -184,7 +179,8 @@
              (input)="searchPair($event.target.value)">
       <span class="widget__input-img">
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
         </svg>
       </span>
     </div>
@@ -195,55 +191,55 @@
   <div class="widget__content widget__content--mob" *ngIf="!marketSearch">
     <!--table mob start-->
     <perfect-scrollbar>
-    <table class="table widget__table widget__table--mob widget__table-markets-mob">
-      <thead>
-      <tr>
-        <th class="table__cell-head table__cell-head--p4">
-          <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"
-              fill="#191A39"/>
-          </svg>
-        </th>
-        <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Pair / <span>Vol</span></th>
-        <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Last price</th>
-        <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span style="margin-right: 16px;">24h chg</span>
-        </th>
-      </tr>
-      </thead>
-      <tbody>
+      <table class="table widget__table widget__table--mob widget__table-markets-mob">
+        <thead>
+        <tr>
+          <th class="table__cell-head table__cell-head--p4">
+            <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"
+                fill="#191A39"/>
+            </svg>
+          </th>
+          <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Pair / <span>Vol</span></th>
+          <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Last price</th>
+          <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span style="margin-right: 16px;">24h chg</span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
 
-      <ng-container *ngFor="let pair of pairs | currencySort:'volume'">
-      <tr class="table__row widget__table-row">
-        <td class="table__cell table__cell--tac">
+        <ng-container *ngFor="let pair of pairs | currencySort:'volume'">
+          <tr class="table__row widget__table-row">
+            <td class="table__cell table__cell--tac">
     <span class="table__row-star" [ngClass]="{'table__row-star--select': isFavourite(pair)}" (click)="toggleFavourite(pair)">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path
       d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
     </svg>
     </span>
-        </td>
-        <td class="table__cell" (click)="onSelectCurrencyPair(pair)">
-          <span>{{splitPairName(pair)[0]}}</span>
-          <span style="font-size: 10px; color:#A0A0A0">/ <span>{{splitPairName(pair)[1]}}</span></span>
-          <div class="txt-small txt-light-grey">Vol {{ +pair.volume | number: '1.0-0' | replaceNumber}}</div>
-        </td>
-        <td class="table__cell" (click)="onSelectCurrencyPair(pair)">
-          <span class="txt-indicate">{{pair.lastOrderRate | replaceNumber}}</span>
-          <div class="txt-small txt-light-grey">$ {{ +pair.priceInUSD | number: '1.0-2'}}</div>
-        </td>
-        <td class="table__cell table__cell--tar" (click)="onSelectCurrencyPair(pair)">
+            </td>
+            <td class="table__cell" (click)="onSelectCurrencyPair(pair)">
+              <span>{{splitPairName(pair)[0]}}</span>
+              <span style="font-size: 10px; color:#A0A0A0">/ <span>{{splitPairName(pair)[1]}}</span></span>
+              <div class="txt-small txt-light-grey">Vol {{ +pair.volume | number: '1.0-0' | replaceNumber}}</div>
+            </td>
+            <td class="table__cell" (click)="onSelectCurrencyPair(pair)">
+              <span class="txt-indicate">{{pair.lastOrderRate | replaceNumber}}</span>
+              <div class="txt-small txt-light-grey">$ {{ +pair.priceInUSD | number: '1.0-2'}}</div>
+            </td>
+            <td class="table__cell table__cell--tar" (click)="onSelectCurrencyPair(pair)">
           <span class=""
                 [ngClass]="{'change-indicate--green': isChangePositive(pair), 'change-indicate--red': !isChangePositive(pair)}">
             {{pair.percentChange >= 0 ? '+' : ''}}{{pair.percentChange | replaceNumber}} <span>%</span></span>
-        </td>
-      </tr>
-      <tr style="height: 4px;"></tr>
-      </ng-container>
+            </td>
+          </tr>
+          <tr style="height: 4px;"></tr>
+        </ng-container>
 
 
-      </tbody>
-    </table>
+        </tbody>
+      </table>
 
     </perfect-scrollbar>
     <!--table mob end-->
