--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -20,6 +20,7 @@
     color: #000;
     font-weight: 600;
     display: table-cell;
+    white-space: nowrap;
     &--tal {
       text-align: left;
     }
@@ -121,6 +122,7 @@
     padding: 8px 10px;
     vertical-align: middle;
     display: table-cell;
+    white-space: nowrap;
     &--tal {
       text-align: left;
     }
