fix order book arr and controls, change color in controls icon in big widget

--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -20,8 +20,8 @@
         </span>
         <span class="widget__controls-horizontal-img">
           <svg width="12" height="16" viewBox="0 0 12 16"  xmlns="http://www.w3.org/2000/svg">
-            <rect width="12" height="9"/>
-            <rect y="11" width="12" height="5"  fill-opacity="0.5"/>
+            <rect width="12" height="9" fill-opacity="0.5"/>
+            <rect y="11" width="12" height="5"  fill-opacity="0.1"/>
           </svg>
         </span>
         <span class="widget__controls-minus" (click)="heightChange(false)" [ngClass]="{'cursorDisable': makeHeight}">
@@ -40,8 +40,8 @@
         </span>
         <span class="widget__controls-vertical-img">
           <svg width="13" height="16" viewBox="0 0 13 16"  xmlns="http://www.w3.org/2000/svg">
-            <rect y="16" width="15.7946" height="7.38544" transform="rotate(-90 0 16)" />
-            <rect x="9" y="16" width="16" height="4" transform="rotate(-90 9 16)" fill-opacity="0.5"/>
+            <rect y="16" width="15.7946" height="7.38544" transform="rotate(-90 0 16)" fill-opacity="0.5"/>
+            <rect x="9" y="16" width="16" height="4" transform="rotate(-90 9 16)" fill-opacity="0.1"/>
           </svg>
         </span>
         <span class="widget__controls-minus" (click)="widthChange(false)" [ngClass]="{'cursorDisable': makeWidth}">
