--- a/src/app/dashboard/order-book/order-book.component.html
+++ b/src/app/dashboard/order-book/order-book.component.html
@@ -119,8 +119,8 @@
       <div class="separator" *ngIf="lastOrder">
         <span *ngIf="maxExrate" [ngClass]="{'color-red': !lastOrderUp, 'color-green': lastOrderUp}">{{!lastOrder.amountBase ? 0 : lastOrder.amountBase
           | number:'1.1-8' | replaceNumber}}</span>
-        <img *ngIf="lastOrderUp" class="arr" src="../assets/img/arr-up-green.svg">
-        <img *ngIf="!lastOrderUp" class="arr" src="../assets/img/arr-down-red.svg">
+        <img *ngIf="lastOrderUp" class="arr arr--ml4" src="../assets/img/arr-up-green.svg">
+        <img *ngIf="!lastOrderUp" class="arr arr--ml4" src="../assets/img/arr-down-red.svg">
         <div class="hr"></div>
         <span *ngIf="minExrate">{{!lastOrder.exrate ? 0 :lastOrder.exrate | number:'1.1-8' | replaceNumber}}</span>
       </div>
