add mob ref levels

--- a/src/assets/scss/components/_filters-popup.scss
+++ b/src/assets/scss/components/_filters-popup.scss
@@ -1,5 +1,6 @@
 .filters-popup{
   display: none;
+  //display: block;
   position: absolute;
   top: 0;
   z-index: 100;
@@ -14,15 +15,21 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 12px;
     margin-bottom: 16px;
   }
   &__title{
     font-size: 24px;
   }
-  &__search{
+  &__close{
+    svg{
+      fill:$darker-blue;
+    }
+  }
+  &__search,&__input{
     margin-bottom: 24px;
   }
-  &__datepicker{
+  &__datepicker,&__select{
     width: 100%;
     &:first-child{
       margin-right: 28px;
@@ -49,6 +56,11 @@
 .dark-theme{
   .filters-popup{
     background-color: $dark-indigo;
+    &__close{
+      svg{
+        fill:$darker-blue;
+      }
+    }
   }
 }
 @media (min-width:1200px) {
