--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -9,7 +9,8 @@
   &__header-mob{
     display: flex;
     align-items: center;
-    margin:12px;
+    margin:0 12px 12px;
+    padding-top: 12px;
   }
   &__page-title{
     font-size: 24px;
