Property 'currency' does not exist fix

--- a/src/app/referral/referral-structure/referral-structure.component.html
+++ b/src/app/referral/referral-structure/referral-structure.component.html
@@ -380,7 +380,7 @@
         <div class="open-structure__info-body">
           <div class="row">
             <div class="wrap-input wrap-input--with-icon open-structure__search">
-              <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+              <input class="wrap-input__input" name="currency" type="text" required>
               <label class="wrap-input__label" for="">Search</label>
               <div class="wrap-input__icon">
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -529,7 +529,7 @@
         <div class="open-structure__info-body">
           <div class="row">
             <div class="wrap-input wrap-input--with-icon open-structure__search">
-              <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+              <input class="wrap-input__input" name="currency" type="text" required>
               <label class="wrap-input__label" for="">Search</label>
               <div class="wrap-input__icon">
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
