fix header menu, hide buttons in header, add hover in header widgets, fix order-book, fix stars in markets, fix dropdown in currency-pair-info

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,36 +31,36 @@
       </li>
       <li class="menu__item"><a class="menu__link" href="https://exrates.me/dashboard"><span class="menu__link-text">News</span></a></li>
     </ul>
-    <ul class="menu">
-      <li class="menu__item menu__item--with-submenu">
-        <a class="menu__link" href="#">
-          <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-notification.svg" alt="notification"><span class="header-button__notification-label">1</span></div>
-        </a>
-        <div class="submenu submenu--notification">
-          <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You get new message from support for your ticket #45173</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>
-            <li class="submenu__item submenu__item--last"><a class="submenu__link submenu__link--center" href="#"><span class="menu__link-text">See all notifications</span></a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="menu__item">
-        <a class="menu__link" href="#">
-          <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-learn.svg" alt="learn"></div>
-        </a>
-      </li>
-      <li class="menu__item" >
-        <a class="menu__link" (click)="toggleTheme()">
-          <div class="menu__link-icon-wrap">
-            <img class="header-button__img" src="../../assets/img/header-lamp.svg" alt="Theme" >
-          </div>
-        </a>
-      </li>
-    </ul>
+    <!--<ul class="menu">-->
+      <!--<li class="menu__item menu__item&#45;&#45;with-submenu">-->
+        <!--<a class="menu__link" href="#">-->
+          <!--<div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-notification.svg" alt="notification"><span class="header-button__notification-label">1</span></div>-->
+        <!--</a>-->
+        <!--<div class="submenu submenu&#45;&#45;notification">-->
+          <!--<ul class="menu submenu__list">-->
+            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
+            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
+            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You get new message from support for your ticket #45173</span></a></li>-->
+            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
+            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
+            <!--<li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>-->
+            <!--<li class="submenu__item submenu__item&#45;&#45;last"><a class="submenu__link submenu__link&#45;&#45;center" href="#"><span class="menu__link-text">See all notifications</span></a></li>-->
+          <!--</ul>-->
+        <!--</div>-->
+      <!--</li>-->
+      <!--<li class="menu__item">-->
+        <!--<a class="menu__link" href="#">-->
+          <!--<div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-learn.svg" alt="learn"></div>-->
+        <!--</a>-->
+      <!--</li>-->
+      <!--<li class="menu__item" >-->
+        <!--<a class="menu__link" (click)="toggleTheme()">-->
+          <!--<div class="menu__link-icon-wrap">-->
+            <!--<img class="header-button__img" src="../../assets/img/header-lamp.svg" alt="Theme" >-->
+          <!--</div>-->
+        <!--</a>-->
+      <!--</li>-->
+    <!--</ul>-->
     <!--<ul class="menu">-->
       <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()">-->
         <!--<a class="menu__link" href="">-->
