--- a/src/app/dashboard/trading/trading.component.scss
+++ b/src/app/dashboard/trading/trading.component.scss
@@ -17,20 +17,21 @@ $darker-blue:#237BEF;
 :host{
   width: 100%;
 }
-input{
-  @media (min-width:1200px){
-    &:not([value=""]){
-      ~ .wrap-input__label {
-        top: -5px;
-        left: 12px;
-        padding: 0 2px;
-        background-color: #2B3256;
-        font-size: 10px;
-        line-height: 12px;
-      }
-    }
-  }
-}
+//@media (min-width:1200px){
+//  input{
+//    &:not([value=""]){
+//      ~ .wrap-input__label {
+//        top: -5px;
+//        left: 12px;
+//        padding: 0 2px;
+//        background-color: #2B3256;
+//        font-size: 10px;
+//        line-height: 12px;
+//      }
+//    }
+//  }
+//}
+
 //input:not([value=""]){
 //   ~ .wrap-input__label {
 //     top: -5px;
