--- a/src/app/shared/components/price-input/price-input.component.scss
+++ b/src/app/shared/components/price-input/price-input.component.scss
@@ -1,11 +1,25 @@
 
-input:not([value=""]){
-  ~ .wrap-input__label {
-    top: -5px;
-    left: 12px;
-    padding: 0 2px;
-    background-color: #2B3256;
-    font-size: 10px;
-    line-height: 12px;
+//input:not([value=""]){
+//  ~ .wrap-input__label {
+//    top: -5px;
+//    left: 12px;
+//    padding: 0 2px;
+//    background-color: #2B3256;
+//    font-size: 10px;
+//    line-height: 12px;
+//  }
+//}
+@media (min-width:1200px){
+  input{
+    &:not([value=""]){
+      ~ .wrap-input__label {
+        top: -5px;
+        left: 12px;
+        padding: 0 2px;
+        background-color: #2B3256;
+        font-size: 10px;
+        line-height: 12px;
+      }
+    }
   }
 }
